--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <doctype! html>
-  <html lang="fr">
-    <head>
-      <title>Premier site</title>
-    </head>
+<html lang="fr">
+	<head>
+		<title>Premier site</title>
+	</head>
+	<body>
+		Salut !!!!
+	</body>
+<html>
     
