--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <doctype! html>
-<html lang="fr">
+	<html lang="fr">
+
 	<head>
 		<title>Premier site</title>
+		<meta charset="utf8">
+		<link rel="stylesheet" href="style.css">
 	</head>
+
 	<body>
-		Salut !!!! 
+		<header>	
+			<ul>
+			<li><a href="#" title="link">SAVEURS GREEN</a></li>
+			<li><a href="#" title="link">EPICERIE</a></li>
+			<li><a href="#" title="link">VIANDES & POISSONS</a></li>
+			<li><a href="#" title="link">FRUITS & LEGUMES</a></li>
+			<li><a href="#" title="link">RECETTES</a></li>
+			</ul>
+		</header>
+	
 	</body>
-<html>
-    
+	<html>
