--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 	</head>
 
 	<body>
-		<header>	
+		<header>
 			<ul>
-			<li><a href="#" title="link">SAVEURS GREEN</a></li>
-			<li><a href="#" title="link">EPICERIE</a></li>
-			<li><a href="#" title="link">VIANDES & POISSONS</a></li>
-			<li><a href="#" title="link">FRUITS & LEGUMES</a></li>
-			<li><a href="#" title="link">RECETTES</a></li>
+				<li><a href="#" title="link">SAVEURS GREEN</a></li>
+				<li><a href="#" title="link">EPICERIE</a></li>
+				<li><a href="#" title="link">VIANDES & POISSONS</a></li>
+				<li><a href="#" title="link">FRUITS & LEGUMES</a></li>
+				<li><a href="#" title="link">RECETTES</a></li>
 			</ul>
 		</header>
-	
+		<p id="intro">Révisons nos classiques avec la recette de la pâte à crêpes, facile, rapide et (très) économique,
+			la pâte à crêpes met tout le monde d’accord.</p>
+		
+			<a id="boutton" href="#" title="link">RETROUVEZ TOUTES NOS RECETTES SUR L'APPLICATION SAVEUR</a>
+		
+		<p id="p1">Février ne serait pas février sans la <b>chandeleur</b> et son lot de crêpes. Parce que <b>la recette de la
+			pâte à crêpes</b> est souvent sujet à discorde « mais non, il faut laisser reposer la pâte une nuit je te dis », voici
+			la vraie <b> recette de la pâte à crêpes</b>, facile et rapide pour régaler toute la famille.</p>
 	</body>
 	<html>
