--- a/index.html
+++ b/index.html
@@ -19,11 +19,32 @@
 		</header>
 		<p id="intro">Révisons nos classiques avec la recette de la pâte à crêpes, facile, rapide et (très) économique,
 			la pâte à crêpes met tout le monde d’accord.</p>
-		
-			<a id="boutton" href="#" title="link">RETROUVEZ TOUTES NOS RECETTES SUR L'APPLICATION SAVEUR</a>
-		
-		<p id="p1">Février ne serait pas février sans la <b>chandeleur</b> et son lot de crêpes. Parce que <b>la recette de la
-			pâte à crêpes</b> est souvent sujet à discorde « mais non, il faut laisser reposer la pâte une nuit je te dis », voici
-			la vraie <b> recette de la pâte à crêpes</b>, facile et rapide pour régaler toute la famille.</p>
+
+		<a id="boutton" href="#" title="link">RETROUVEZ TOUTES NOS RECETTES SUR L'APPLICATION SAVEUR</a>
+
+		<p id="p1">Février ne serait pas février sans la <b>chandeleur</b> et son lot de crêpes. Parce que <b>la recette
+				de la pâte à crêpes</b> est souvent sujet à discorde « mais non, il faut laisser reposer la pâte une nuit je
+			te dis », voici la vraie <b> recette de la pâte à crêpes</b>, facile et rapide pour régaler toute la famille.</p>
+		<HR align="left" width="80%">
+		<p id="p2">Lire aussi : <a href="#" title="link">16 recettes à base de chocolat</a></p>
+		<HR align="left" width="80%">
+		<h2 id="titreliste">Pâte à crêpe facile : la recette : </h2>
+		<p id="p1">Comptez une dizaine de minutes pour la préparation de la <b>pâte à crêpes</b>, et 1h de repos  
+			(nul besoin de la faire reposer plus longtemps).</p>
+		<p id="p1">Niveau ingrédients, <b>la pâte à crêpes</b> n’est pas très exigeante :</p>
+		<ul id="nav">
+			<li id="ingre">125 g de farine de fromage</li>
+			<li id="ingre">4 œufs</li>
+			<li id="ingre">25 cl de lait entier</li>
+			<li id="ingre">1 pincée de sel</li>
+			<li id="ingre">1 sachet de sucre vanillé</li>
+			<li id="ingre">1 c. À soupe de rhum ou d’eau de fleur d’oranger (pour parfumer la pâte)</li>
+		</ul>
+		<h2 id="titreliste">La recette de la pâte à crêpes:</h2>
+		<ul id="nav2">
+			<li id="ingre">Mélangez la farine, le sel et le sucre dans un grand bol. Faites un puits au milieu.</li>
+			<li id="ingre">Fouettez les œufs et la moitié du lait et verser le mélange dans le puits. Mélangez en incorporant petit à petit la farine.</li>
+			<li id="ingre">Ajoutez le reste de lait et le rhum ou l’eau de fleur d’oranger. Laisser reposer 1h.</li>
+		</ul>
 	</body>
 	<html>
